fixed z-index bug with searcher loop icon on mobile, pushed to netlify

--- a/beer/src/components/BeerDetails/beerDetails.scss
+++ b/beer/src/components/BeerDetails/beerDetails.scss
@@ -2,7 +2,7 @@
 
 .beerDetails {
     position: relative;
-    z-index: 0;
+    z-index: 3;
     padding: 2% 5%;
     display: grid;
     background: $background-color;
