--- a/beer/src/components/Navbar/navbar-styles.scss
+++ b/beer/src/components/Navbar/navbar-styles.scss
@@ -15,7 +15,7 @@
     .nav {
         display: flex;
         .navItem {
-            .favStar{
+            .favStar {
                 font-size: 30px;
                 cursor: pointer;
             }
@@ -53,7 +53,7 @@
     .navbar {
         padding: 0;
         position: fixed;
-        z-index: 1;
+        z-index: 4;
         bottom: 0;
         overflow: visible;
         .logo {
@@ -64,7 +64,7 @@
             justify-content: space-between;
             position: relative;
             .navItem {
-                .favStar{
+                .favStar {
                     font-size: 2rem;
                 }
                 .navItemLink {
